# project-labyrinth

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: description.txt
docs/assets/: cli_sim.html
examples/: claude_integration.py  gemini_integration.py  openai_integration.py  token_dashboard.html
labyrinth/: __init__.py  backends.py  cache.py  cli.py  delta.py  encoder.py  memory.py  proxy.py  truth_loop.py
tests/: benchmark.py  test_cache.py  test_delta.py  test_memory.py  test_truth_loop.py
